<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6DFBD">

    <Button
        android:id="@+id/button22"
        android:layout_width="119dp"
        android:layout_height="58dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#F870C3BC"
        android:onClick="launchServices"
        android:text="@string/action_service"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button21"
        android:layout_width="119dp"
        android:layout_height="58dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#F870C3BC"
        android:onClick="logout"
        android:text="@string/action_logout"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="116dp"
        android:layout_height="62dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#F870C3BC"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="118dp"
        android:layout_height="57dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#F870C3BC"
        android:onClick="launchPetCard"
        android:text="@string/petcards"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="120dp"
        android:layout_height="54dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#F870C3BC"
        android:onClick="launchActivities"
        android:text="@string/activity"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="119dp"
        android:layout_height="58dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#F870C3BC"
        android:onClick="launchProducts"
        android:text="@string/action_product"
        app:layout_constraintEnd_toEndOf="@+id/button21"
        app:layout_constraintStart_toStartOf="@+id/button21"
        app:layout_constraintTop_toBottomOf="@+id/button21" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="364dp"
        android:layout_height="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        app:srcCompat="@drawable/pawsup_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>